Smart delete for paragraphs. https://bugs.webkit.org/show_bug.cgi?id=195837

Reviewed by Ryosuke Niwa.

Remove additional newlines to maintain spacing around paragraphs.

Tests: editing/pasteboard/smart-delete-paragraph-001.html
       editing/pasteboard/smart-delete-paragraph-002.html
       editing/pasteboard/smart-delete-paragraph-003.html
       editing/pasteboard/smart-delete-paragraph-004.html

* editing/DeleteSelectionCommand.cpp:
(WebCore::isBlankLine):
(WebCore::DeleteSelectionCommand::initializePositionData):


Canonical link: https://commits.webkit.org/210360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243296 268f45cc-cd09-0410-ab3c-d52691b4dbfc