Source/WebCore/editing/DeleteSelectionCommand.h
@@ -69,6 +69,8 @@ private:
     void removeNode(Node&, ShouldAssumeContentIsAlwaysEditable = DoNotAssumeContentIsAlwaysEditable) override;
     void deleteTextFromNode(Text&, unsigned, unsigned) override;
     void removeRedundantBlocks();
+    bool shouldSmartDeleteParagraphSpacers();
+    void smartDeleteParagraphSpacers();
 
     // This function provides access to original string after the correction has been deleted.
     String originalStringForAutocorrectionAtBeginningOfSelection();
